import { render, screen, fireEvent } from '@testing-library/react';
import userEvent from '@testing-library/user-event';
import { describe, expect, it, vi } from 'vitest';
import { Tabs } from './tabs';

describe('Tabs', () => {
  const renderBasicTabs = (props = {}) => {
    return render(
      <Tabs data-testid="tabs" {...props}>
        Test content
      </Tabs>
    );
  };

  describe('Snapshots', () => {
    it('matches default snapshot', () => {
      const { container } = renderBasicTabs();
      expect(container.firstChild).toMatchSnapshot();
    });

    it('matches loading state snapshot', () => {
      const { container } = renderBasicTabs({ loading: true });
      expect(container.firstChild).toMatchSnapshot();
    });
    it('matches disabled state snapshot', () => {
      const { container } = renderBasicTabs({ disabled: true });
      expect(container.firstChild).toMatchSnapshot();
    });
    it('matches active state snapshot', () => {
      const { container } = renderBasicTabs({ active: true });
      expect(container.firstChild).toMatchSnapshot();
    });
  });

  describe('Basic Functionality', () => {
    it('renders correctly', () => {
      renderBasicTabs();
      expect(screen.getByTestId('tabs')).toBeInTheDocument();
    });

  });




  describe('States', () => {
    it('handles loading state correctly', () => {
      renderBasicTabs({ loading: true });
      const element = screen.getByTestId('tabs');
      expect(element).toBeInTheDocument();
      // TODO: Add specific assertions for loading state
    });
    it('handles disabled state correctly', () => {
      renderBasicTabs({ disabled: true });
      const element = screen.getByTestId('tabs');
      expect(element).toBeInTheDocument();
      // TODO: Add specific assertions for disabled state
    });
    it('handles active state correctly', () => {
      renderBasicTabs({ active: true });
      const element = screen.getByTestId('tabs');
      expect(element).toBeInTheDocument();
      // TODO: Add specific assertions for active state
    });
  });




  describe('Props', () => {
    it('handles badge prop correctly', () => {
      renderBasicTabs({ badge: "test-value" });
      const element = screen.getByTestId('tabs');
      expect(element).toBeInTheDocument();
      // TODO: Add specific assertions for badge prop
    });
    it('handles loading prop correctly', () => {
      renderBasicTabs({ loading: true });
      const element = screen.getByTestId('tabs');
      expect(element).toBeInTheDocument();
      // TODO: Add specific assertions for loading prop
    });
  });

  describe('Accessibility', () => {
    it.skip('can be focused - SKIPPED: Non-focusable element', () => {
      // This element cannot receive focus (div/span/table)
      // Focus tests disabled for accessibility accuracy
      expect(true).toBe(true);
    });

    it('has proper ARIA attributes', () => {
      renderBasicTabs();
      const element = screen.getByTestId('tabs');
      expect(element).toBeInTheDocument();
      // TODO: Add specific ARIA attribute tests based on component type
    });

    it.skip('supports keyboard navigation - SKIPPED: Non-focusable element', () => {
      // This element cannot receive focus (div/span/table)
      // Focus tests disabled for accessibility accuracy
      expect(true).toBe(true);
    });

    it('announces changes to screen readers', () => {
      renderBasicTabs();
      // TODO: Add screen reader announcement tests
      expect(screen.getByTestId('tabs')).toBeInTheDocument();
    });

    it('respects reduced motion preferences', () => {
      renderBasicTabs();
      // TODO: Add reduced motion tests
      expect(screen.getByTestId('tabs')).toBeInTheDocument();
    });
  });

  describe('Custom Styling and Props', () => {
    it('accepts custom className', () => {
      renderBasicTabs({ className: 'custom-class' });
      const element = screen.getByTestId('tabs');
      expect(element).toHaveClass('custom-class');
    });

    it('forwards refs correctly', () => {
      const ref = vi.fn();
      renderBasicTabs({ ref });
      // Ref forwarding test - environment dependent
    // expect(ref).toHaveBeenCalledWith(expect.any(HTMLElement));
    });

    it('spreads additional props', () => {
      renderBasicTabs({ 'data-custom': 'test-value' });
      const element = screen.getByTestId('tabs');
      expect(element).toHaveAttribute('data-custom', 'test-value');
    });
  });

  describe('Edge Cases', () => {
    it('handles undefined props gracefully', () => {
      renderBasicTabs({ children: undefined });
      expect(screen.getByTestId('tabs')).toBeInTheDocument();
    });

    it('handles null props gracefully', () => {
      renderBasicTabs({ children: null });
      expect(screen.getByTestId('tabs')).toBeInTheDocument();
    });

    it('handles empty string props', () => {
      renderBasicTabs({ className: '' });
      expect(screen.getByTestId('tabs')).toBeInTheDocument();
    });

    it('handles rapid prop changes', () => {
      const { rerender } = renderBasicTabs({ className: 'class1' });
      rerender(<Tabs data-testid="tabs" className="class2" />);
      const element = screen.getByTestId('tabs');
      expect(element).toHaveClass('class2');
    });

    it('handles complex nested content', () => {
      render(
        <Tabs data-testid="tabs">
          <div>
            <span>Nested content</span>
            <p>More content</p>
          </div>
        </Tabs>
      );
      expect(screen.getByTestId('tabs')).toBeInTheDocument();
    });

    it('maintains functionality with many children', () => {
      render(
        <Tabs data-testid="tabs">
          {Array.from({ length: 100 }, (_, i) => (
            <div key={i}>Item {i}</div>
          ))}
        </Tabs>
      );
      expect(screen.getByTestId('tabs')).toBeInTheDocument();
    });

    it('handles component unmounting cleanly', () => {
      const { unmount } = renderBasicTabs();
      expect(() => unmount()).not.toThrow();
    });

    it('preserves functionality after remounting', () => {
      const { unmount } = renderBasicTabs();
      unmount();
      renderBasicTabs();
      expect(screen.getByTestId('tabs')).toBeInTheDocument();
    });
  });
});

// TODO: Review and customize generated tests based on component-specific requirements
// TODO: Add component-specific interaction tests
// TODO: Verify all variant combinations work correctly
// TODO: Test integration with form libraries if applicable
// TODO: Add performance tests for complex components
