// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tabs > Snapshots > matches active state snapshot 1`] = `
<div
  class=""
  data-orientation="horizontal"
  data-testid="tabs"
  dir="ltr"
>
  Test content
</div>
`;

exports[`Tabs > Snapshots > matches default snapshot 1`] = `
<div
  class=""
  data-orientation="horizontal"
  data-testid="tabs"
  dir="ltr"
>
  Test content
</div>
`;

exports[`Tabs > Snapshots > matches disabled state snapshot 1`] = `
<div
  class=""
  data-orientation="horizontal"
  data-testid="tabs"
  dir="ltr"
  disabled=""
>
  Test content
</div>
`;

exports[`Tabs > Snapshots > matches loading state snapshot 1`] = `
<div
  class=""
  data-orientation="horizontal"
  data-testid="tabs"
  dir="ltr"
>
  Test content
</div>
`;
